--- a/local/data/ui/views/manufacturing_process_dashboard.xml
+++ b/local/data/ui/views/manufacturing_process_dashboard.xml
@@ -31,8 +31,8 @@
             
             <div class="pc-item-mark" data-item="1">
               <div class="pc-item-arrow">
-                <div class="pc-item-arrow-item arrow-top"/>
-                <div class="pc-item-arrow-item arrow-bot"/>
+                <div class="pc-item-arrow-item arrow-top green"/>
+                <div class="pc-item-arrow-item arrow-bot green"/>
               </div>
               <div class="pc-item-icon">
                 <p>
@@ -69,8 +69,8 @@
             
             <div class="pc-item-mark" data-item="3">
               <div class="pc-item-arrow">
-                <div class="pc-item-arrow-item arrow-top"/>
-                <div class="pc-item-arrow-item arrow-bot"/>
+                <div class="pc-item-arrow-item arrow-top green"/>
+                <div class="pc-item-arrow-item arrow-bot green"/>
               </div>
               <div class="pc-item-icon">
                 <p>
@@ -88,8 +88,8 @@
             
             <div class="pc-item-mark" data-item="4">
               <div class="pc-item-arrow">
-                <div class="pc-item-arrow-item arrow-top"/>
-                <div class="pc-item-arrow-item arrow-bot"/>
+                <div class="pc-item-arrow-item arrow-top green"/>
+                <div class="pc-item-arrow-item arrow-bot green"/>
               </div>
               <div class="pc-item-icon">
                 <p>
@@ -126,8 +126,8 @@
             
             <div class="pc-item-mark" data-item="6">
               <div class="pc-item-arrow">
-                <div class="pc-item-arrow-item arrow-top"/>
-                <div class="pc-item-arrow-item arrow-bot"/>
+                <div class="pc-item-arrow-item arrow-top green"/>
+                <div class="pc-item-arrow-item arrow-bot green"/>
               </div>
               <div class="pc-item-icon">
                 <p>
